@@ -5,6 +5,7 @@ import lombok.NoArgsConstructor;
 import ma.TodoApplication.TodoApplication.entities.User;
 import ma.TodoApplication.TodoApplication.entities.dto.UserRequestDto;
 import ma.TodoApplication.TodoApplication.entities.dto.UserResponseDto;
+import ma.TodoApplication.TodoApplication.exceptions.EntityNotFoundException;
 import ma.TodoApplication.TodoApplication.repositories.UserRepository;
 import ma.TodoApplication.TodoApplication.utils.Mapping;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -24,20 +25,19 @@ public class UserServiceImp implements UserService {
     public List<UserResponseDto> getAllUsers() {
         return userRepository.findAll().stream()
                 .map(Mapping::mapToUserResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public UserResponseDto createUser(UserRequestDto userDto) {
         User user = Mapping.mapToUserEntity(userDto);
-        User savedUser = userRepository.save(user);
-        return Mapping.mapToUserResponseDto(savedUser);
+        return Mapping.mapToUserResponseDto(userRepository.save(user));
     }
 
     @Override
-    public UserResponseDto getUserById(Long id) {
+    public UserResponseDto getUserById(Long id) throws EntityNotFoundException{
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + id));
+                .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + id));
         return Mapping.mapToUserResponseDto(user);
     }
 
@@ -47,9 +47,9 @@ public class UserServiceImp implements UserService {
     }
 
     @Override
-    public UserResponseDto updateUser(UserRequestDto userDto) {
+    public UserResponseDto updateUser(UserRequestDto userDto) throws EntityNotFoundException{
         User user = userRepository.findById(userDto.getId())
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + userDto.getId()));
+                .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + userDto.getId()));
 
         // Update user fields
         user.setFirstName(userDto.getFirstName());
